# emborch

./: .gitignore  CMakeLists.txt  Makefile  benchmark_testSamples.c  definitons.h  javascript.js  lua_engine.c  lua_functions.c  main.c  main.lua  msg_processor.c  native_task.c  requirements.txt  script
NodeFirmware/: CMakeLists.txt  Makefile  benchmark_test_samples.c  main.c  msg_processor.c  native_task.c
NodeFirmware/cmake-build/: CMakeCache.txt  build.ninja  cmake_install.cmake
NodeFirmware/cmake-build/.cmake/api/v1/reply/: cache-v2-d121b32290f7393e1f7a.json  cmakeFiles-v1-50c0492676f4209dbb94.json  codemodel-v2-2185d282d556ef8beb14.json  directory-NodeFirmware-Debug-1c81760ab0bac08e4676.json  directory-RIOT-Debug-dbc1dacc2943a387688a.json  index-2023-06-26T20-44-34-0495.json  target-RIOT-Debug-37d40c62301b0e20dd54.json  target-emborch-Debug-97e8fc8de6f717b3a2c0.json  toolchains-v1-207a12dbd8df5c98d81b.json
NodeFirmware/cmake-build/NodeFirmware/: cmake_install.cmake
NodeFirmware/cmake-build/RIOT/: cmake_install.cmake
NodeFirmware/include/: definitons.h  messages.h  msg_processor.h
NodeFirmware/include/test/: benchmark_test_samples.h  native_task.h
NodeFirmware/lua_engine/: Makefile  Makefile.include  lua_engine.c  lua_functions.c  lua_functions.h
NodeFirmware/lua_engine/include/: lua_engine.h  lua_functions.h
Orchestrator/: AsyncTaskManager.py  Message.py  MessageService.py  NodeRegistry.py  ScriptService.py  SerialConnector.py  ServerRelay.py  adjectives.txt  main.lua  main.py  names.txt
Orchestrator/Backend/: MessageService.py  NodeRegistry.py  ScriptDispatcher.py  ScriptService.py  SerialConnector.py
Orchestrator/Backend/Connector/: Connector.py  Node.py  PhysicalConnector.py  SerialConnector.py  SerialPort.py
Orchestrator/Backend/MessageService/: MessageService.py
Orchestrator/Backend/NodeRegistry/: NodeRegistry.py
Orchestrator/Backend/ScriptDispatcher/: ScriptDispatcher.py
Orchestrator/Dashboard/: AsyncTk.py  Dashboard.py
Orchestrator/Dashboard/Containers/: NodeContainer.py  ScriptContainer.py
Orchestrator/Dashboard/Widgets/: ScriptContainer.py
Orchestrator/Frontend/: AsyncTk.py
Orchestrator/Frontend/Widgets/: ScriptContainer.py  Widget.py
Orchestrator/Server/Connector/: Connector.py  SerialConnector.py  SerialPort.py
Orchestrator/Server/EventBus/: Event.py  EventBus.py  EventComponent.py
Orchestrator/Server/MessageService/: Message.py  MessageService.py
Orchestrator/Server/NodeRegistry/: Node.py  NodeRegistry.py
Orchestrator/Server/NodesScheduler/: NodesScheduler.py
Orchestrator/Server/ScriptDispatcher/: ScriptDispatcher.py  ScriptService.py
include/: benchmark_testSamples.h  board.h  debug.h  definitons.h  lua_engine.h  lua_functions.h  msg_processor.h  native_task.h
